--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/gasparov20/DockMaster#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.11.14",
+    "socket.io": "^3.1.0",
     "superheroes": "^3.0.0"
   }
 }
