--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "DockMaster",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,13 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "socket.io": "^3.1.0",
-    "superheroes": "^3.0.0"
+    "superheroes": "^3.0.0",
+    "webpack": "^5.19.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.4.0"
   }
 }
