--- a/src/package.json
+++ b/src/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/gasparov20/DockMaster#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.3",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "socket.io": "^3.1.0",
     "superheroes": "^3.0.0",
-    "webpack": "^5.19.0"
+    "utf-8-validate": "^5.0.4",
+    "webpack": "^5.19.0",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "webpack-cli": "^4.4.0"
